--- a/aula002-semantica/index.html
+++ b/aula002-semantica/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="pt-br">
 <head>
     <!---->
     <meta charset="UTF-8">
@@ -6,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Semântica HTML 5</title>
 </head>
-<head>
+<body>
     <main>
         <header>Barra de titulo</header>
         <nav>Barra de navegação</nav>
@@ -14,5 +15,9 @@
             <article>Artigo para a section</article>
             <article>Artigo para a section</article>
         </section>
+        <aside>Barra lateral da página</aside>
+        <footer>Rodapé da página</footer>
     </main>
-</head>
+
+</body>
+</html>
