--- a/aulas/aula005-imagens/index.html
+++ b/aulas/aula005-imagens/index.html
@@ -1,31 +1,63 @@
+<html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
 
-<html land="pt-br">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Exemplo de Uso 'figure' e 'picture'</title>
-    </head>
-    <body>
-        <main>
-            <section>
-                <h1>Exemplo de Uso das Tags 'figure' e 'picture' </h1>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-                <article>
-                    <h2>1.Exemplo de uso da tag 'figure'</h2>
-                    <p>A tag 'figure' é usada para agrupar uma imagem com sua legenda ou desrição.</p>
-                    <figure>
-                        <img src="https://placehold.co/600x400" alt="Paisagem montanhosa durante o pôr do Sol">
-                        <figcaption>Uma bela paisagem montanhosa durante o pôr do Sol</figcaption>
-                    </figure>
-                </article>
-            </section>
+    <title>Exemplo de Uso de 'figure' e 'picture</title>
+  </head>
 
-            <section>
-                <article>
-                    <h2>2. Exemplo de uso da tag 'picture'</h2>
-                    <p>A tag 'picture' é usada para fornecer diferentes </p>
-                </article>
-            </section>
-        </main>
-    </body>
+  <body>
+    <main>
+      <section>
+        <h1>Exemplo de Uso das Tags 'figure' e 'picture</h1>
+
+        <article>
+          <h2>1. Exemplo de uso da tag figure</h2>
+
+          <p>
+            A tag figure é usada para agrupar uma imagem com sua legenda ou
+            descrição.
+          </p>
+
+          <figure>
+            <img
+              src="https://placehold.co/600x400"
+              alt="Paisagem montanhosa durante o pôr do sol"
+            />
+
+            <figcaption>
+              Uma bela paisagem montanhosa durante o pôr do sol.
+            </figcaption>
+          </figure>
+        </article>
+      </section>
+
+      <section>
+        <article>
+          <h2>2. Exemplo de uso da tag 'picture`</h2>
+
+          <p>
+            A tag `picture é usada para fornecer diferentes versões de uma
+            imagem, de acordo com o tamanho da tela ou a resolução.
+          </p>
+
+          <p>
+            0 navegador escolhe automaticamente a versão mais adequada da
+            imagem.
+          </p>
+
+          <picture>
+            <source srcset="img/floresta2.jpg" media="(max-width: 1080px)" />
+            <source srcset="img/florestal.jpg" media="(min-width: 400px)" />
+            <img "img/floresta3.jpg" alt="Imagem responsiva">
+          </picture>
+        </article>
+      </section>
+    </main>
+
+    <footer>
+      <p>&copy; 2025 Exemplo de Uso HTML5 Todos os direitos reservados.</p>
+    </footer>
+  </body>
 </html>
