--- a/aulas/aula005-imagens/index.html
+++ b/aulas/aula005-imagens/index.html
@@ -22,7 +22,7 @@
 
           <figure>
             <img
-              src="https://placehold.co/600x400"
+              src="img\freepik__the-style-is-pixel-art-with-a-retro-8bit-pixelated__57539.jfif"
               alt="Paisagem montanhosa durante o pôr do sol"
             />
 
@@ -48,9 +48,22 @@
           </p>
 
           <picture>
-            <source srcset="img/floresta2.jpg" media="(max-width: 1080px)" />
-            <source srcset="img/florestal.jpg" media="(min-width: 400px)" />
-            <img "img/floresta3.jpg" alt="Imagem responsiva">
+            <source
+              srcset="
+                img\freepik__the-style-is-80sinspired-with-neon-colors-grid-pat__57538.jfif
+              "
+              media="(max-width: 1080px)"
+            />
+            <source
+              srcset="
+                img\freepik__the-style-is-80sinspired-with-neon-colors-grid-pat__57538.jfif
+              "
+              media="(min-width: 400px)"
+            />
+            <img
+              scr="img\freepik__the-style-is-80sinspired-with-neon-colors-grid-pat__57538.jfif"
+              alt="Imagem responsiva"
+            />
           </picture>
         </article>
       </section>
