--- a/aulas/aula007-ancora/index.html
+++ b/aulas/aula007-ancora/index.html
@@ -75,8 +75,13 @@
             praesentium 33 galisum dolorum ea consequatur voluptatem. Est
             laboriosam perspiciatis sit voluptatibus repellat non doloribus dolor.
         </p>
-        
+        <!-- Link para voltar ao topo-->
+        <li><a href="#">Voltart ao topo</a></li>
       </section>
     </main>
+
+    <footer>
+      <p>&copy; 2025 Exemplo de Navegação com Âncoras</p>
+    </footer>
   </body>
 </html>
