--- a/projetos/index.html
+++ b/projetos/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
     <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title></title>
     </head>
+
     <body>
 
         <header>
@@ -20,16 +22,29 @@
 
         <main>
             <hr>
+
             <section>
                 <h2></h2>
                 <p></p>
             </section>
+
+            <section>
+                <h2></h2>
+                <p></p>
+            </section>
+
+            <section>
+                <h2></h2>
+                <p></p>
+            </section>
+
             <hr>
         </main>
 
         <footer>
         <p>&copy; 2025 Exemplo de Navegação com Âncoras</p>
         </footer>
-        
+
     </body>
+
 </html>
