--- a/aulas/aula008-tabelas/index.html
+++ b/aulas/aula008-tabelas/index.html
@@ -111,7 +111,7 @@
                 <tr>
                 <th rowspan="2">ID</th>
                 <th rowspan="2">Nome</th>
-                <th rowspan="2">Sálario</th>
+                <th colspan="2">Sálario</th>
                 <th rowspan="2">Departamento</th>
                 </tr>
                 <tr>
