--- a/projetos/index.html
+++ b/projetos/index.html
@@ -4,7 +4,7 @@
     <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title></title>
+    <title>Projeto</title>
     </head>
 
     <body>
@@ -42,7 +42,7 @@
         </main>
 
         <footer>
-        <p>&copy; 2025 Exemplo de Navegação com Âncoras</p>
+        <p>&copy; 2025 Copyright</p>
         </footer>
 
     </body>
