--- a/projetos/index.html
+++ b/projetos/index.html
@@ -1,50 +1,113 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
-    <head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title></title>
-    </head>
+    <title>Sexo?</title>
+  </head>
 
-    <body>
+  <body>
+    <header>
+      <h1>testes</h1>
+      <nav>
+        <ul>
+          <li><a href="pagina1.html">Ir para Página 1</a></li>
+          <li><a href="pagina2.html">Ir para Página 2</a></li>
+        </ul>
+      </nav>
+    </header>
 
-        <header>
-            <h1></h1>
-            <nav>
-                <ul>
-                    <li><a></a></li>
-                    <li><a></a></li>
-                    <li><a></a></li>
-                </ul>
-            </nav>
-        </header>
+    <main>
+      <hr />
 
-        <main>
-            <hr>
+      <section>
+        <article>
+          <h2>blabal</h2>
+          <p>
+            <strong>Yoshikage Kira</strong> é um dos <mark>vilõe</mark>s mais
+            <u>icônicos</u> da série <u>&lt;JoJo's Bizarre Adventure&gt;</u>,
+            especificamente da <strong>parte 4</strong>,
+            <mark>Diamond is Unbreakable</mark>.<br />Ele é um homem
+            aparentemente comum que esconde um lado bem sombrio.<strong
+              >Kira</strong
+            >
+            é um <em>assassino serial </em>com uma
+            <strong><sup>obsessão</sup></strong
+            >p or <del>mãos femininas</del> e uma forte
+            <strong>necessidade</strong> de <sub>viver</sub> uma
+            <sup>vida</sup> tranquila e sem ser <del>incomodado</del>.
+          </p>
 
-            <section>
-                <h2></h2>
-                <p></p>
-            </section>
+          <picture>
+            <source
+              srcset="img\133743374_10284165.jpg"
+              media="(min-width: 300px)"
+            />
+            <img scr="img\133743374_10284165.jpg" alt="ser?" />
+          </picture>
+        </article>
+      </section>
 
-            <section>
-                <h2></h2>
-                <p></p>
-            </section>
+      <section>
+        <article>
+          <h2>imim</h2>
+          <p>
+            Ele possui o <strong>stand</strong> <mark>Killer Queen</mark>, que
+            tem a <mark>habilidade</mark> de transformar qualquer coisa que
+            toque em uma <mark>bomba</mark>.<br />O
+            <strong>Stand</strong> possui diferentes <small>modos</small>, como
+            o <u>&lt;Sheer Heart Attack&gt;</u>, uma <em>bomba autônoma</em> que
+            caça seus alvos, e <u>Bites the Dust</u>, um
+            <u>&lt;poder&gt;</u> que permite a <strong>Kira</strong> manipular o
+            tempo, criando uma <em>espécie</em> de
+            <strong>"loop temporal"</strong> em que as pessoas que tentam
+            revelar a sua identidade <del>morrem</del> e o
+            <mark>tempo volta para um <small>ponto</small> específico.</mark>
+          </p>
 
-            <section>
-                <h2></h2>
-                <p></p>
-            </section>
+          <picture>
+            <source
+              srcset="img\133743374_10284165.jpg"
+              media="(min-width: 300px)"
+            />
+            <img scr="img\133743374_10284165.jpg" alt="ser?" />
+          </picture>
+        </article>
+      </section>
 
-            <hr>
-        </main>
+      <section>
+        <article>
+          <h2>gyatatt</h2>
+          <p>
+            A<mark><strong>principal motivação</strong></mark> de Kira é
+            <sub>viver</sub> em paz, sem a <sub>interferência</sub> de ninguém,
+            e ele fará qualquer coisa para <em>proteger</em> sua identidade e
+            continuar sua <sup>rotina tranquila</sup>.<br />Essa busca por
+            <u>normalidade</u>, somada à sua <strong>psicopatia</strong>, o
+            torna um personagem fascinante e bem complexo. Sua relação com o seu
+            <strong>Stand</strong> e suas
+            <del
+              >tendências <mark>psicopáticas</mark> o transformam em um dos
+              vilões mais <mark>interessantes</mark> da série</del
+            >.
+          </p>
 
-        <footer>
-        <p>&copy; 2025 Copyright</p>
-        </footer>
+          <picture>
+            <source
+              srcset="img\133743374_10284165.jpg"
+              media="(min-width: 300px)"
+            />
+            <img scr="img\133743374_10284165.jpg" alt="ser?" />
+          </picture>
+        </article>
+        <li><a href="#">Voltar ao topo</a></li>
+      </section>
 
-    </body>
+      <hr />
+    </main>
 
+    <footer>
+      <p>&copy; 2025 Copyright</p>
+    </footer>
+  </body>
 </html>
