uh... nao sei oque eu fiz

--- a/atividades/atividade002-landing-page/index.html
+++ b/atividades/atividade002-landing-page/index.html
@@ -1,41 +1,63 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
-    <head>
- 
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/estilo.css" />
     <title>Viagens</title>
+</head>
 
-    <head>
+<body>
 
-    <body>
-
-        <header>
-            <div class="fonte">
+    <header>
+        <div class="fonte">
             <h2>Estrela do Viajante</h2>
-            </div>
-            </header>
-        </header>
+        </div>
+    </header>
 
-        <nav>
-            <ul>
-                <li><a href="#sobre">Sobre Nós</a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-            </ul>
-        </nav>
+    <nav>
+        
+        <a href="#sobre">Sobre Nós</a>
+        <a href="#destinos">Destinos</a>
+        <a href="#contato">Contato</a>
+        
+    </nav>
 
-        <main>
-            <section id="sobre">
-                <article>
-                    <p></p>
-                </article>
-            </section>
-        </main>
+    <main>
 
-    </body>
+        <figure>
+            <img src="img\2149153258.jpg"/>
+        </figure>
+
+        <section id="sobre">
+            <article>
+                <h3>Quem Somos</h3>
+                <p>Somos uma agência dedicada a proporcionar experiências únicas de viagem. Descubra o mundo conosco!</p>
+            </article>
+        </section>
+
+        <section id="destinos">
+            <article>
+                <h3>Destinos Populares</h3>
+                <p>Explore lugares incríveis ao redor do mundo e encontre sua próxima aventura.</p>
+            </article>
+        </section>
+
+        <section id="contato">
+            <article>
+                <h3>Entre em Contato</h3>
+                <p>Tem alguma dúvida? Fale conosco e vamos te ajudar a planejar a viagem dos seus sonhos.</p>
+                <p>Entre em contado: (32) 9999 9999 estrelaviajante@gmail.com</p>
+            </article>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 Estrela do Viajante - Todos os direitos reservados.</p>
+    </footer>
+
+</body>
 
 </html>
