--- a/atividades/atividade002-landing-page/index.html
+++ b/atividades/atividade002-landing-page/index.html
@@ -13,64 +13,50 @@
       <div class="fonte">
         <h2>&#9885; Estrela do Viajante</h2>
       </div>
-      <nav>
-        <a href="#sobre">Sobre Nós</a>
-        <a href="#destinos">Destinos</a>
-        <a href="#contato">Contato</a>
-      </nav>
     </header>
 
+    <nav>
+      <a href="#lugares">Lugares no Brasil</a>
+      <a href="#exterior">Lugares no exterior</a>
+      <a href="#contato">Contato</a>
+    </nav>
+
     <picture>
-      <source
-        srcset="img\freepik__expand__84921.jpg"
-        media="max-width:600 px"
-      />
-      <source
-        srcset="img\freepik__expand__84921.jpg"
-        media="max-width:900 px"
-      />
-      <source
-        srcset="img\freepik__expand__84921.jpg"
-        media="max-width:1100 px"
-      />
-      <img src="img\freepik__expand__84922.jpg" />
+      <source media="(max-width: 1000px)" srcset="img\2151700780 (1).jpg" />
+      <source media="(min-width: 1500px)" srcset="img/2151700780 (2).jpg" />
+      <source media="(min-width: 2000px)" srcset="img/2151700780.jpg" />
+      <img src="img/digital-art-dark-cosmic-night-sky.jpg" alt="" />
     </picture>
 
     <main>
       <hr />
-      <div class="fonte">
-        <section id="sobre">
-          <article>
-            <h2>&#10025; Quem Somos</h2>
-            <p>
-              Somos uma agência dedicada a lhe informar sobre os melhores pontos
-              de viagem,<br> com base em avaliações em site Populares.<br>
-            </p>
-            
-          </article>
-        </section>
 
-        <section id="destinos">
-          <article>
-            <h2>&#10025; Destinos Populares</h2>
-            <p>
-              Explore lugares incríveis com base em nossas sugestões
-            </p>
-            <p></p>
-          </article>
-        </section>
+      <section id="lugares">
+        <h2>&#10025; Melhores lugares no Brasil</h2>
 
-        <section id="contato">
-          <article>
-            <h2>&#10025; Entre em Contato</h2>
-            <p>
-              Tem alguma dúvida? Fale conosco e vamos te ajudar a esclarecer
-              <br>algumas duvidas viagem dos seus sonhos.
-            </p>
-            <p>Telefone: (32) 9999 9999<br>Email: estrelaviajante@gmail.com</p>
-          </article>
-        </section>
-      </div>
+        <article>
+          <figure>
+            <img src="" alt="sadas" />
+          </figure>
+
+          <p>abdaiiqaif</p>
+        </article>
+        <a class="voltar-inicio" href="#">Voltar ao topo</a>
+      </section>
+
+      <hr />
+      <section id="exterior">
+        <h2>&#10025; Melhores lugares no exterior</h2>
+
+        <article>
+          <figure>
+            <img src="" alt="sadas" />
+          </figure>
+
+          <p>abdaiiqaif</p>
+        </article>
+        <a class="voltar-inicio" href="#">Voltar ao topo</a>
+      </section>
 
       <hr />
     </main>
