--- a/atividades/atividade002-landing-page/index.html
+++ b/atividades/atividade002-landing-page/index.html
@@ -18,7 +18,7 @@
     <nav>
       <a href="#lugares">Lugares no Brasil</a>
       <a href="#exterior">Lugares no exterior</a>
-      <a href="#contato">Contato</a>
+      <a href="#epoca">Melhores epocas</a>
     </nav>
 
     <picture>
@@ -41,6 +41,13 @@
 
           <p>abdaiiqaif</p>
         </article>
+        <article>
+          <figure>
+            <img src="" alt="sadas" />
+          </figure>
+
+          <p>abdaiiqaif</p>
+        </article>
         <a class="voltar-inicio" href="#">Voltar ao topo</a>
       </section>
 
@@ -54,6 +61,21 @@
           </figure>
 
           <p>abdaiiqaif</p>
+        </article>
+        <a class="voltar-inicio" href="#">Voltar ao topo</a>
+      </section>
+
+      <hr />
+
+      <section id="epoca">
+        <h2>&#10025; Melhores Epocas para viajar</h2>
+
+        <article>
+          <figure>
+            <img src="" alt="sadas" />
+          </figure>
+
+          <p>Caso você esteja pensando em viajar em uma epoca quente, recomendamos entre os meses de Janeiro e Maio, para visitar praias ou lugares refrescantes.</p>
         </article>
         <a class="voltar-inicio" href="#">Voltar ao topo</a>
       </section>
