--- a/atividades/atividade002-landing-page/index.html
+++ b/atividades/atividade002-landing-page/index.html
@@ -36,14 +36,14 @@
 
         <article>
           <figure>
-            <img src="" alt="sadas" />
+            <img src="" alt="sao paulo" />
           </figure>
 
           <p>abdaiiqaif</p>
         </article>
         <article>
           <figure>
-            <img src="" alt="sadas" />
+            <img src="" alt="Rio de janeiro" />
           </figure>
 
           <p>abdaiiqaif</p>
@@ -57,7 +57,7 @@
 
         <article>
           <figure>
-            <img src="" alt="sadas" />
+            <img src="" alt="roma" />
           </figure>
 
           <p>abdaiiqaif</p>
