--- a/aulas/aula006-elementos/index.html
+++ b/aulas/aula006-elementos/index.html
@@ -18,7 +18,7 @@
 
     <main>
       <section class="float-left">
-        <img src="img/imagem 150x150.png" alt="Imagen flutuando à esquerda" />
+        <img src="img\d184116fc5f720de84ebf56d839c5650.jpg" alt="Imagen flutuando à esquerda" />
 
         <p>
           Este bloco usa <strong>float: left</strong>, fazendo com que o texto o
@@ -38,6 +38,39 @@
           PageMaker.
         </p>
       </section>
+      <section class="float-right">
+        <img src="img\c8d7ca7d3dc2f1aa29e4d35d5f8261f5.jpg" alt="Imagen flutuando à direita" />
+        <p>
+            Este bloco usa <strong>float: float-right</strong>, fazendo com que o texto o
+            envolva pelo lado esquerdo.
+          </p>
+  
+          <p>
+            Lorem Ipsum é simplesmente uma simulação de texto da indústria
+            tipográfica e de impressos, e ven sendo utilizado desde o século XVI,
+            quando um impressor desconhecido pegou uma bandeja de tipos e os
+            enbaralhou para fazer un livro de modelos de tipos. Lorem Ipsum
+            sobreviveu não só a cinco séculos, como também ao salto para a
+            editoração eletrônica, permanecendo essencialmente inalterado. Se
+            popularizou na década de 60, quando a Letraset lançou decalques
+            contendo passagens de Lorem Ipsum, e mais recentemente quando passou a
+            ser integrado a softwares de editoração eletrônica como Aldus
+            PageMaker.
+          </p>
+
+      </section>
+
+      <div class="clear"></div>
+
+      <section class="float-none">
+            <p>
+            Este bloco usa <strong>float: float-none</strong>, ou seja, segue o fluxo normal da pagina, sem alteração no layout.
+            </p>
+      </section>
     </main>
+
+    <footer>
+        <p>Exemplo de Float no CSS - Desenvolvido com HTML5 e CSS3</p>
+    </footer>
   </body>
 </html>
