--- a/aulas/aula006-elementos/index.html
+++ b/aulas/aula006-elementos/index.html
@@ -18,7 +18,7 @@
 
     <main>
       <section class="float-left">
-        <img src="img\d184116fc5f720de84ebf56d839c5650.jpg" alt="Imagen flutuando à esquerda" />
+        <img src="img\images.jfif" alt="Imagen flutuando à esquerda" />
 
         <p>
           Este bloco usa <strong>float: left</strong>, fazendo com que o texto o
