--- a/atividades/atividade002-landing-page/index.html
+++ b/atividades/atividade002-landing-page/index.html
@@ -31,38 +31,80 @@
     <main>
       <hr />
 
-      <section id="lugares">
+      <section id="lugares" class="float-left">
         <h2>&#10025; Melhores lugares no Brasil</h2>
 
         <article>
-          <figure>
-            <img src="" alt="sao paulo" />
-          </figure>
+          <img src="img\09f6c604-fa70-401a-9257-89fcf38e07fb.webp" />
 
-          <p>abdaiiqaif</p>
+          <p>
+            São Paulo é uma cidade que se destaca pela diversidade cultural,
+            gastronômica e de entretenimento. Com museus renomados como o MASP e
+            a Pinacoteca, e uma cena artística vibrante, oferece experiências
+            únicas. A gastronomia é variada, com a famosa pizza paulista e
+            excelente comida japonesa, resultado da grande comunidade nipônica.
+            A cidade é um mosaico de culturas, com bairros como Liberdade, de
+            influência japonesa, e Bixiga, com herança italiana. São Paulo ainda
+            é sede de grandes eventos como a São Paulo Fashion Week e a Parada
+            do Orgulho LGBT, tornando-se um destino imperdível para quem busca
+            cultura e diversão.
+          </p>
         </article>
+
+        <div class="clear"></div>
+
+        <article class="float-right">
+          <img src="img\3756139071-7503cdbe19-o.webp" />
+
+          <p>
+            O Rio de Janeiro é um dos destinos mais emblemáticos do Brasil,
+            conhecido por suas paisagens naturais deslumbrantes, como o Cristo
+            Redentor, o Pão de Açúcar e suas mundialmente famosas praias, como
+            Copacabana e Ipanema. A cidade é o coração do samba e do carnaval,
+            proporcionando uma energia única, com blocos de rua e festividades
+            durante o ano inteiro. Além dos pontos turísticos icônicos, o Rio
+            oferece opções culturais riquíssimas, como o Museu do Amanhã, o MAR
+            (Museu de Arte do Rio), e o Jardim Botânico, onde a natureza e a
+            arte se encontram.
+          </p>
+        </article>
+
+        <div class="clear"></div>
+
         <article>
-          <figure>
-            <img src="" alt="Rio de janeiro" />
-          </figure>
+          <img src="img\belohorizonte_2.jpg" />
 
-          <p>abdaiiqaif</p>
+          <p>
+            Belo Horizonte é a cidade perfeita para quem deseja explorar a rica
+            cultura de Minas Gerais, conhecida pela acolhida calorosa de seus
+            habitantes e sua culinária única. A cidade é um verdadeiro paraíso
+            gastronômico, com pratos típicos como o pão de queijo, o feijão
+            tropeiro e a comida de boteco, que são servidos nos diversos bares e
+            restaurantes espalhados pela capital. O Mercado Central é um dos
+            lugares mais tradicionais da cidade, oferecendo produtos locais e
+            petiscos irresistíveis, sendo uma parada obrigatória para quem
+            visita a cidade.
+          </p>
         </article>
-        <a class="voltar-inicio" href="#">Voltar ao topo</a>
+
+        <div class="clear"></div>
+
+        <h2><a class="voltar-inicio" href="#">Voltar ao topo</a></h2>
       </section>
 
       <hr />
-      <section id="exterior">
+
+      <section id="exterior" class="float-right">
         <h2>&#10025; Melhores lugares no exterior</h2>
 
         <article>
-          <figure>
-            <img src="" alt="roma" />
-          </figure>
+          <img src="" />
 
           <p>abdaiiqaif</p>
         </article>
-        <a class="voltar-inicio" href="#">Voltar ao topo</a>
+        <div class="clear"></div>
+
+        <h2><a class="voltar-inicio" href="#">Voltar ao topo</a></h2>
       </section>
 
       <hr />
@@ -71,13 +113,17 @@
         <h2>&#10025; Melhores Epocas para viajar</h2>
 
         <article>
-          <figure>
-            <img src="" alt="sadas" />
-          </figure>
+          <img src="" />
 
-          <p>Caso você esteja pensando em viajar em uma epoca quente, recomendamos entre os meses de Janeiro e Maio, para visitar praias ou lugares refrescantes.</p>
+          <p>
+            Caso você esteja pensando em viajar em uma epoca quente,
+            recomendamos entre os meses de Janeiro e Maio, para visitar praias
+            ou lugares refrescantes.
+          </p>
         </article>
-        <a class="voltar-inicio" href="#">Voltar ao topo</a>
+        <div class="clear"></div>
+
+        <h2><a class="voltar-inicio" href="#">Voltar ao topo</a></h2>
       </section>
 
       <hr />
