--- a/atividades/atividade002-landing-page/index.html
+++ b/atividades/atividade002-landing-page/index.html
@@ -93,15 +93,65 @@
       </section>
 
       <hr />
+      <div class="clear"></div>
 
       <section id="exterior" class="float-right">
-        <h2>&#10025; Melhores lugares no exterior</h2>
+        <h2>&#10025; Melhores Lugares no Exterior</h2>
 
         <article>
-          <img src="" />
-
-          <p>abdaiiqaif</p>
+          <img src="imagem_paris.jpg" alt="Vista de Paris" />
+          <p>
+            Paris é uma das cidades mais visitadas do mundo e é famosa por sua
+            arquitetura icônica, como a Torre Eiffel, o Arco do Triunfo e a
+            Catedral de Notre-Dame. Além disso, a cidade oferece uma rica cena
+            cultural, com museus renomados como o Louvre e o Musée d'Orsay.
+            Paris é ideal para quem aprecia arte, gastronomia e uma atmosfera
+            romântica.
+          </p>
+          <p>
+            Não deixe de caminhar pelas charmosas ruas de Montmartre, visitar o
+            bairro de Le Marais e experimentar as delícias da pâtisserie
+            francesa.
+          </p>
+    
         </article>
+
+        <div class="clear"></div>
+        <article class="float-left">
+          <img src="imagem_tokyo.jpg" alt="Vista de Tóquio" />
+          <p>
+            Tóquio é uma cidade vibrante que mistura tradição e modernidade de
+            maneira única. Você pode explorar templos históricos como o Senso-ji
+            em Asakusa, enquanto também visita bairros futuristas como Shibuya e
+            Shinjuku, onde as luzes neon dominam a paisagem. Tóquio também é
+            famosa pela culinária, especialmente sushi e ramen, além de ser um
+            ótimo destino para compras e entretenimento.
+          </p>
+          <p>
+            Não perca a chance de visitar o bairro de Akihabara, o paraíso dos
+            eletrônicos e da cultura pop japonesa, e experimentar a famosa
+            cultura de cafés temáticos e lojas de anime.
+          </p>
+        </article>
+        <div class="clear"></div>
+
+        <article>
+          <img src="imagem_nova-york.jpg" alt="Vista de Nova York" />
+          <p>
+            Nova York é uma cidade dinâmica e diversa, com algo para todos.
+            Conhecida como a "cidade que nunca dorme", oferece atrações icônicas
+            como a Estátua da Liberdade, o Central Park e a Times Square. Além
+            disso, você pode desfrutar de uma das cenas artísticas mais
+            impressionantes do mundo, com a Broadway, o Museu de Arte Moderna e
+            outros locais culturais renomados.
+          </p>
+          <p>
+            Para uma experiência única, passeie por bairros como Brooklyn e
+            SoHo, e explore a culinária diversificada, desde comida de rua até
+            restaurantes estrelados.
+          </p>
+        </article>
+
         <div class="clear"></div>
 
         <h2><a class="voltar-inicio" href="#">Voltar ao topo</a></h2>
@@ -110,17 +160,54 @@
       <hr />
 
       <section id="epoca">
-        <h2>&#10025; Melhores Epocas para viajar</h2>
+        <h2>&#10025; Melhores Épocas para Viajar</h2>
 
         <article>
-          <img src="" />
+          <img src="" alt="Imagem representativa de viagens" />
 
           <p>
-            Caso você esteja pensando em viajar em uma epoca quente,
-            recomendamos entre os meses de Janeiro e Maio, para visitar praias
-            ou lugares refrescantes.
+            Caso você esteja pensando em viajar para aproveitar uma época
+            quente, sugerimos que considere os meses entre Janeiro e Maio.
+            Durante esse período, você pode explorar praias paradisíacas ou
+            destinos refrescantes, ideais para quem quer fugir do frio e relaxar
+            ao sol.
+          </p>
+
+          <p>
+            Se você é fã de temperaturas mais amenas, os meses de Setembro a
+            Novembro são perfeitos. É a época em que muitos destinos ao redor do
+            mundo começam a se preparar para a alta temporada, oferecendo
+            atividades culturais, festivais e atrações turísticas com menos
+            turistas, o que proporciona uma experiência mais tranquila.
+          </p>
+
+          <p>
+            Para aqueles que preferem o clima mais frio, os meses de Junho a
+            Agosto são ideais para explorar regiões de montanha, como as Alpes
+            ou até destinos tropicais que oferecem um clima mais fresco durante
+            o verão. Durante essa temporada, você pode aproveitar atividades
+            como esqui, snowboard ou até trilhas nas montanhas, que ficam ainda
+            mais impressionantes com o charme da neve.
+          </p>
+
+          <p>
+            Além do clima, também é importante considerar eventos e festivais
+            que acontecem em determinadas épocas do ano. Por exemplo, se você
+            quer vivenciar o Carnaval no Brasil, a melhor época para visitar é
+            entre Fevereiro e Março. Já se o seu objetivo é participar de festas
+            tradicionais na Europa, como a Oktoberfest na Alemanha, os meses de
+            Setembro e Outubro são perfeitos.
+          </p>
+
+          <p>
+            Em qualquer época do ano, lembre-se de verificar as condições
+            climáticas locais, o que pode impactar a disponibilidade de algumas
+            atividades turísticas. Também vale a pena planejar o que levar de
+            acordo com a estação, para garantir o máximo de conforto durante a
+            viagem.
           </p>
         </article>
+
         <div class="clear"></div>
 
         <h2><a class="voltar-inicio" href="#">Voltar ao topo</a></h2>
