--- a/atividades/atividade002-landing-page/index.html
+++ b/atividades/atividade002-landing-page/index.html
@@ -29,16 +29,16 @@
     </picture>
 
     <main>
-      <hr />
+
 
       <section id="lugares" class="float-left">
         <h2>&#10025; Melhores lugares no Brasil</h2>
 
         <article>
-          <img src="img\09f6c604-fa70-401a-9257-89fcf38e07fb.webp" />
+          <img src="img\09f6c604-fa70-401a-9257-89fcf38e07fb.webp" alt="São Paulo"/>
 
           <p>
-            São Paulo é uma cidade que se destaca pela diversidade cultural,
+            <strong>São Paulo</strong> é uma cidade que se destaca pela diversidade cultural,
             gastronômica e de entretenimento. Com museus renomados como o MASP e
             a Pinacoteca, e uma cena artística vibrante, oferece experiências
             únicas. A gastronomia é variada, com a famosa pizza paulista e
@@ -54,10 +54,10 @@
         <div class="clear"></div>
 
         <article class="float-right">
-          <img src="img\3756139071-7503cdbe19-o.webp" />
+          <img src="img\3756139071-7503cdbe19-o.webp" alt="Rio de Janeiro"/>
 
           <p>
-            O Rio de Janeiro é um dos destinos mais emblemáticos do Brasil,
+            O <strong>Rio de Janeiro</strong> é um dos destinos mais emblemáticos do Brasil,
             conhecido por suas paisagens naturais deslumbrantes, como o Cristo
             Redentor, o Pão de Açúcar e suas mundialmente famosas praias, como
             Copacabana e Ipanema. A cidade é o coração do samba e do carnaval,
@@ -72,10 +72,10 @@
         <div class="clear"></div>
 
         <article>
-          <img src="img\belohorizonte_2.jpg" />
+          <img src="img\belohorizonte_2.jpg" alt="Belo Horizonte" />
 
           <p>
-            Belo Horizonte é a cidade perfeita para quem deseja explorar a rica
+            <strong>Belo Horizonte</strong> é a cidade perfeita para quem deseja explorar a rica
             cultura de Minas Gerais, conhecida pela acolhida calorosa de seus
             habitantes e sua culinária única. A cidade é um verdadeiro paraíso
             gastronômico, com pratos típicos como o pão de queijo, o feijão
@@ -92,16 +92,15 @@
         <h2><a class="voltar-inicio" href="#">Voltar ao topo</a></h2>
       </section>
 
-      <hr />
       <div class="clear"></div>
 
       <section id="exterior" class="float-right">
         <h2>&#10025; Melhores Lugares no Exterior</h2>
 
         <article>
-          <img src="imagem_paris.jpg" alt="Vista de Paris" />
+          <img src="img\comedie-tour-eiffel.jpg" alt="Paris" />
           <p>
-            Paris é uma das cidades mais visitadas do mundo e é famosa por sua
+            <strong>Paris </strong>é uma das cidades mais visitadas do mundo e é famosa por sua
             arquitetura icônica, como a Torre Eiffel, o Arco do Triunfo e a
             Catedral de Notre-Dame. Além disso, a cidade oferece uma rica cena
             cultural, com museus renomados como o Louvre e o Musée d'Orsay.
@@ -118,9 +117,9 @@
 
         <div class="clear"></div>
         <article class="float-left">
-          <img src="imagem_tokyo.jpg" alt="Vista de Tóquio" />
+          <img src="img\filters_format(webp).webp" alt="Tóquio" />
           <p>
-            Tóquio é uma cidade vibrante que mistura tradição e modernidade de
+            ><strong>Tóquio</strong> é uma cidade vibrante que mistura tradição e modernidade de
             maneira única. Você pode explorar templos históricos como o Senso-ji
             em Asakusa, enquanto também visita bairros futuristas como Shibuya e
             Shinjuku, onde as luzes neon dominam a paisagem. Tóquio também é
@@ -136,9 +135,9 @@
         <div class="clear"></div>
 
         <article>
-          <img src="imagem_nova-york.jpg" alt="Vista de Nova York" />
+          <img src="img\New-York-Helicopter-Tour-2.eric_both.bottom_right.jpg.webp" alt="Nova York" />
           <p>
-            Nova York é uma cidade dinâmica e diversa, com algo para todos.
+            <strong>Nova York</strong> é uma cidade dinâmica e diversa, com algo para todos.
             Conhecida como a "cidade que nunca dorme", oferece atrações icônicas
             como a Estátua da Liberdade, o Central Park e a Times Square. Além
             disso, você pode desfrutar de uma das cenas artísticas mais
@@ -157,13 +156,11 @@
         <h2><a class="voltar-inicio" href="#">Voltar ao topo</a></h2>
       </section>
 
-      <hr />
 
       <section id="epoca">
         <h2>&#10025; Melhores Épocas para Viajar</h2>
 
         <article>
-          <img src="" alt="Imagem representativa de viagens" />
 
           <p>
             Caso você esteja pensando em viajar para aproveitar uma época
@@ -213,7 +210,7 @@
         <h2><a class="voltar-inicio" href="#">Voltar ao topo</a></h2>
       </section>
 
-      <hr />
+
     </main>
 
     <footer>
