--- a/testes/index.html
+++ b/testes/index.html
@@ -22,10 +22,11 @@
     <main>
 
       <section>
-
+        <div class="borda-solida">
         <article>
             <p>abdkjaajkfsdjvkjsashjsfsfhssjssvvf</p>
         </article>
+      </div>
 
       </section>
 
