--- a/testes/index.html
+++ b/testes/index.html
@@ -112,8 +112,165 @@
           antigas, como a criação de páginas estáticas, estão sendo
           <del>descontinuadas</del> em favor de abordagens mais <strong>modernas</strong>.
         </p>
+      </article>
 
-    </article>
+      </section>
+
+      <h1 id="op1">Texto</h1>
+      <section>
+
+        <article  class="borda-solida" >
+
+            <h3>titulo</h3>
+
+            <img src="img\8760611.png" class="img-article ">
+
+            <p>
+              0 <strong>HTML</strong> (Hypertext Markup Language) é a base para a
+              criação de páginas web. Utilizando tags como <em>&lt;h1&gt;</em> a
+              <em>&lt;h6&gt;</em> para cabeçalhos e <u>&lt;p&gt;</u> para parágrafos,
+              ele organiza o conteúdo de forma <em>&lt;estruturada&gt;</em>. Além disso,
+              <mark>o CSS</mark> é responsável pela parte visual das páginas, como
+              cores, fontes e <u>disposição dos elementos</u>. Com o uso de A
+              <small>design responsivo</small>, as páginas se adaptam automaticamente ao
+              tamanho da tela de dispositivos móveis. Por exemplo, a fórmula da água
+              H<sub>2</sub>0 e a equação de <mark>Einstein</mark>, <u>E = mc</u><sup>2</sup>, utilizam
+              <sub>subíndices</sub> e <sup>superíndices</sup> para representações
+              científicas. A evolução da web trouxe a necessidade de criar páginas
+              dinâmicas e interativas, com JavaScript. Contudo, algumas práticas
+              antigas, como a criação de páginas estáticas, estão sendo
+              <del>descontinuadas</del> em favor de abordagens mais <strong>modernas</strong>.
+            </p>
+
+        </article>
+
+        <article  class="borda-solida" >
+
+          <h3>titulo</h3>
+
+          <img src="img\8760611.png" class="img-article ">
+
+          <p>
+            0 <strong>HTML</strong> (Hypertext Markup Language) é a base para a
+            criação de páginas web. Utilizando tags como <em>&lt;h1&gt;</em> a
+            <em>&lt;h6&gt;</em> para cabeçalhos e <u>&lt;p&gt;</u> para parágrafos,
+            ele organiza o conteúdo de forma <em>&lt;estruturada&gt;</em>. Além disso,
+            <mark>o CSS</mark> é responsável pela parte visual das páginas, como
+            cores, fontes e <u>disposição dos elementos</u>. Com o uso de A
+            <small>design responsivo</small>, as páginas se adaptam automaticamente ao
+            tamanho da tela de dispositivos móveis. Por exemplo, a fórmula da água
+            H<sub>2</sub>0 e a equação de <mark>Einstein</mark>, <u>E = mc</u><sup>2</sup>, utilizam
+            <sub>subíndices</sub> e <sup>superíndices</sup> para representações
+            científicas. A evolução da web trouxe a necessidade de criar páginas
+            dinâmicas e interativas, com JavaScript. Contudo, algumas práticas
+            antigas, como a criação de páginas estáticas, estão sendo
+            <del>descontinuadas</del> em favor de abordagens mais <strong>modernas</strong>.
+          </p>
+
+      </article>
+
+      <article  class="borda-solida" >
+
+        <h3>titulo</h3>
+
+        <img src="img\8760611.png" class="img-article ">
+
+        <p>
+          0 <strong>HTML</strong> (Hypertext Markup Language) é a base para a
+          criação de páginas web. Utilizando tags como <em>&lt;h1&gt;</em> a
+          <em>&lt;h6&gt;</em> para cabeçalhos e <u>&lt;p&gt;</u> para parágrafos,
+          ele organiza o conteúdo de forma <em>&lt;estruturada&gt;</em>. Além disso,
+          <mark>o CSS</mark> é responsável pela parte visual das páginas, como
+          cores, fontes e <u>disposição dos elementos</u>. Com o uso de A
+          <small>design responsivo</small>, as páginas se adaptam automaticamente ao
+          tamanho da tela de dispositivos móveis. Por exemplo, a fórmula da água
+          H<sub>2</sub>0 e a equação de <mark>Einstein</mark>, <u>E = mc</u><sup>2</sup>, utilizam
+          <sub>subíndices</sub> e <sup>superíndices</sup> para representações
+          científicas. A evolução da web trouxe a necessidade de criar páginas
+          dinâmicas e interativas, com JavaScript. Contudo, algumas práticas
+          antigas, como a criação de páginas estáticas, estão sendo
+          <del>descontinuadas</del> em favor de abordagens mais <strong>modernas</strong>.
+        </p>
+      </article>
+
+      </section>
+
+      <h1 id="op1">Texto</h1>
+      <section>
+
+        <article  class="borda-solida" >
+
+            <h3>titulo</h3>
+
+            <img src="img\8760611.png" class="img-article ">
+
+            <p>
+              0 <strong>HTML</strong> (Hypertext Markup Language) é a base para a
+              criação de páginas web. Utilizando tags como <em>&lt;h1&gt;</em> a
+              <em>&lt;h6&gt;</em> para cabeçalhos e <u>&lt;p&gt;</u> para parágrafos,
+              ele organiza o conteúdo de forma <em>&lt;estruturada&gt;</em>. Além disso,
+              <mark>o CSS</mark> é responsável pela parte visual das páginas, como
+              cores, fontes e <u>disposição dos elementos</u>. Com o uso de A
+              <small>design responsivo</small>, as páginas se adaptam automaticamente ao
+              tamanho da tela de dispositivos móveis. Por exemplo, a fórmula da água
+              H<sub>2</sub>0 e a equação de <mark>Einstein</mark>, <u>E = mc</u><sup>2</sup>, utilizam
+              <sub>subíndices</sub> e <sup>superíndices</sup> para representações
+              científicas. A evolução da web trouxe a necessidade de criar páginas
+              dinâmicas e interativas, com JavaScript. Contudo, algumas práticas
+              antigas, como a criação de páginas estáticas, estão sendo
+              <del>descontinuadas</del> em favor de abordagens mais <strong>modernas</strong>.
+            </p>
+
+        </article>
+
+        <article  class="borda-solida" >
+
+          <h3>titulo</h3>
+
+          <img src="img\8760611.png" class="img-article ">
+
+          <p>
+            0 <strong>HTML</strong> (Hypertext Markup Language) é a base para a
+            criação de páginas web. Utilizando tags como <em>&lt;h1&gt;</em> a
+            <em>&lt;h6&gt;</em> para cabeçalhos e <u>&lt;p&gt;</u> para parágrafos,
+            ele organiza o conteúdo de forma <em>&lt;estruturada&gt;</em>. Além disso,
+            <mark>o CSS</mark> é responsável pela parte visual das páginas, como
+            cores, fontes e <u>disposição dos elementos</u>. Com o uso de A
+            <small>design responsivo</small>, as páginas se adaptam automaticamente ao
+            tamanho da tela de dispositivos móveis. Por exemplo, a fórmula da água
+            H<sub>2</sub>0 e a equação de <mark>Einstein</mark>, <u>E = mc</u><sup>2</sup>, utilizam
+            <sub>subíndices</sub> e <sup>superíndices</sup> para representações
+            científicas. A evolução da web trouxe a necessidade de criar páginas
+            dinâmicas e interativas, com JavaScript. Contudo, algumas práticas
+            antigas, como a criação de páginas estáticas, estão sendo
+            <del>descontinuadas</del> em favor de abordagens mais <strong>modernas</strong>.
+          </p>
+
+      </article>
+
+      <article  class="borda-solida" >
+
+        <h3>titulo</h3>
+
+        <img src="img\8760611.png" class="img-article ">
+
+        <p>
+          0 <strong>HTML</strong> (Hypertext Markup Language) é a base para a
+          criação de páginas web. Utilizando tags como <em>&lt;h1&gt;</em> a
+          <em>&lt;h6&gt;</em> para cabeçalhos e <u>&lt;p&gt;</u> para parágrafos,
+          ele organiza o conteúdo de forma <em>&lt;estruturada&gt;</em>. Além disso,
+          <mark>o CSS</mark> é responsável pela parte visual das páginas, como
+          cores, fontes e <u>disposição dos elementos</u>. Com o uso de A
+          <small>design responsivo</small>, as páginas se adaptam automaticamente ao
+          tamanho da tela de dispositivos móveis. Por exemplo, a fórmula da água
+          H<sub>2</sub>0 e a equação de <mark>Einstein</mark>, <u>E = mc</u><sup>2</sup>, utilizam
+          <sub>subíndices</sub> e <sup>superíndices</sup> para representações
+          científicas. A evolução da web trouxe a necessidade de criar páginas
+          dinâmicas e interativas, com JavaScript. Contudo, algumas práticas
+          antigas, como a criação de páginas estáticas, estão sendo
+          <del>descontinuadas</del> em favor de abordagens mais <strong>modernas</strong>.
+        </p>
+      </article>
 
       </section>
       
