--- a/testes/index.html
+++ b/testes/index.html
@@ -13,20 +13,22 @@
   </head>
 
   <body>
-    <header>
+    <header class="float-left">
       <figure id="logo">
-        <img src="img\nubank-logo.png" />
+        <img src="img\flying_7791053.png" />
       </figure>
-      <h1>Titulo</h1>
-    </header>
 
-    <nav>
-      <a href="#op1">op1</a>
-      <a href="#op2">op2</a>
-      <a href="#op3">op3</a>
-    </nav>
+      <nav>
+        <a href="#op1">op1</a>
+        <a href="#op2">op2</a>
+        <a href="#op3">op3</a>
+      </nav>
+    </header>
+    
+  
 
     <main>
+      <div class="box-fixo"><a href="#">Voltar ao topo</a></div>
       <section id="img-topo">
         <img src="img\12780283_5054407.jpg" class="img-topo" />
         <img src="img\12780283_5054407.jpg" class="img-topo" />
@@ -116,325 +118,6 @@
         </article>
       </section>
 
-      <section>
-      <article class="borda-solida">
-        <h3>titulo</h3>
-
-        <img src="img\8760611.png" class="img-article" />
-
-        <p>
-          0 <strong>HTML</strong> (Hypertext Markup Language) é a base para a
-          criação de páginas web. Utilizando tags como <em>&lt;h1&gt;</em> a
-          <em>&lt;h6&gt;</em> para cabeçalhos e <u>&lt;p&gt;</u> para
-          parágrafos, ele organiza o conteúdo de forma
-          <em>&lt;estruturada&gt;</em>. Além disso, <mark>o CSS</mark> é
-          responsável pela parte visual das páginas, como cores, fontes e
-          <u>disposição dos elementos</u>. Com o uso de A
-          <small>design responsivo</small>, as páginas se adaptam
-          automaticamente ao tamanho da tela de dispositivos móveis. Por
-          exemplo, a fórmula da água H<sub>2</sub>0 e a equação de
-          <mark>Einstein</mark>, <u>E = mc</u><sup>2</sup>, utilizam
-          <sub>subíndices</sub> e <sup>superíndices</sup> para representações
-          científicas. A evolução da web trouxe a necessidade de criar páginas
-          dinâmicas e interativas, com JavaScript. Contudo, algumas práticas
-          antigas, como a criação de páginas estáticas, estão sendo
-          <del>descontinuadas</del> em favor de abordagens mais
-          <strong>modernas</strong>.
-        </p>
-      </article>
-
-      <article class="borda-solida">
-        <h3>titulo</h3>
-
-        <img src="img\8760611.png" class="img-article" />
-
-        <p>
-          0 <strong>HTML</strong> (Hypertext Markup Language) é a base para a
-          criação de páginas web. Utilizando tags como <em>&lt;h1&gt;</em> a
-          <em>&lt;h6&gt;</em> para cabeçalhos e <u>&lt;p&gt;</u> para
-          parágrafos, ele organiza o conteúdo de forma
-          <em>&lt;estruturada&gt;</em>. Além disso, <mark>o CSS</mark> é
-          responsável pela parte visual das páginas, como cores, fontes e
-          <u>disposição dos elementos</u>. Com o uso de A
-          <small>design responsivo</small>, as páginas se adaptam
-          automaticamente ao tamanho da tela de dispositivos móveis. Por
-          exemplo, a fórmula da água H<sub>2</sub>0 e a equação de
-          <mark>Einstein</mark>, <u>E = mc</u><sup>2</sup>, utilizam
-          <sub>subíndices</sub> e <sup>superíndices</sup> para representações
-          científicas. A evolução da web trouxe a necessidade de criar páginas
-          dinâmicas e interativas, com JavaScript. Contudo, algumas práticas
-          antigas, como a criação de páginas estáticas, estão sendo
-          <del>descontinuadas</del> em favor de abordagens mais
-          <strong>modernas</strong>.
-        </p>
-      </article>
-
-      <article class="borda-solida">
-        <h3>titulo</h3>
-
-        <img src="img\8760611.png" class="img-article" />
-
-        <p>
-          0 <strong>HTML</strong> (Hypertext Markup Language) é a base para a
-          criação de páginas web. Utilizando tags como <em>&lt;h1&gt;</em> a
-          <em>&lt;h6&gt;</em> para cabeçalhos e <u>&lt;p&gt;</u> para
-          parágrafos, ele organiza o conteúdo de forma
-          <em>&lt;estruturada&gt;</em>. Além disso, <mark>o CSS</mark> é
-          responsável pela parte visual das páginas, como cores, fontes e
-          <u>disposição dos elementos</u>. Com o uso de A
-          <small>design responsivo</small>, as páginas se adaptam
-          automaticamente ao tamanho da tela de dispositivos móveis. Por
-          exemplo, a fórmula da água H<sub>2</sub>0 e a equação de
-          <mark>Einstein</mark>, <u>E = mc</u><sup>2</sup>, utilizam
-          <sub>subíndices</sub> e <sup>superíndices</sup> para representações
-          científicas. A evolução da web trouxe a necessidade de criar páginas
-          dinâmicas e interativas, com JavaScript. Contudo, algumas práticas
-          antigas, como a criação de páginas estáticas, estão sendo
-          <del>descontinuadas</del> em favor de abordagens mais
-          <strong>modernas</strong>.
-        </p>
-      </article>
-      </section>
-
-      <h1>Texto</h1>
-      <section id="op2">
-        <article class="borda-solida">
-          <h3>titulo</h3>
-
-          <img src="img\8760611.png" class="img-article" />
-
-          <p>
-            0 <strong>HTML</strong> (Hypertext Markup Language) é a base para a
-            criação de páginas web. Utilizando tags como <em>&lt;h1&gt;</em> a
-            <em>&lt;h6&gt;</em> para cabeçalhos e <u>&lt;p&gt;</u> para
-            parágrafos, ele organiza o conteúdo de forma
-            <em>&lt;estruturada&gt;</em>. Além disso, <mark>o CSS</mark> é
-            responsável pela parte visual das páginas, como cores, fontes e
-            <u>disposição dos elementos</u>. Com o uso de A
-            <small>design responsivo</small>, as páginas se adaptam
-            automaticamente ao tamanho da tela de dispositivos móveis. Por
-            exemplo, a fórmula da água H<sub>2</sub>0 e a equação de
-            <mark>Einstein</mark>, <u>E = mc</u><sup>2</sup>, utilizam
-            <sub>subíndices</sub> e <sup>superíndices</sup> para representações
-            científicas. A evolução da web trouxe a necessidade de criar páginas
-            dinâmicas e interativas, com JavaScript. Contudo, algumas práticas
-            antigas, como a criação de páginas estáticas, estão sendo
-            <del>descontinuadas</del> em favor de abordagens mais
-            <strong>modernas</strong>.
-          </p>
-        </article>
-
-        <article class="borda-solida">
-          <h3>titulo</h3>
-
-          <img src="img\8760611.png" class="img-article" />
-
-          <p>
-            0 <strong>HTML</strong> (Hypertext Markup Language) é a base para a
-            criação de páginas web. Utilizando tags como <em>&lt;h1&gt;</em> a
-            <em>&lt;h6&gt;</em> para cabeçalhos e <u>&lt;p&gt;</u> para
-            parágrafos, ele organiza o conteúdo de forma
-            <em>&lt;estruturada&gt;</em>. Além disso, <mark>o CSS</mark> é
-            responsável pela parte visual das páginas, como cores, fontes e
-            <u>disposição dos elementos</u>. Com o uso de A
-            <small>design responsivo</small>, as páginas se adaptam
-            automaticamente ao tamanho da tela de dispositivos móveis. Por
-            exemplo, a fórmula da água H<sub>2</sub>0 e a equação de
-            <mark>Einstein</mark>, <u>E = mc</u><sup>2</sup>, utilizam
-            <sub>subíndices</sub> e <sup>superíndices</sup> para representações
-            científicas. A evolução da web trouxe a necessidade de criar páginas
-            dinâmicas e interativas, com JavaScript. Contudo, algumas práticas
-            antigas, como a criação de páginas estáticas, estão sendo
-            <del>descontinuadas</del> em favor de abordagens mais
-            <strong>modernas</strong>.
-          </p>
-        </article>
-
-        <article class="borda-solida">
-          <h3>titulo</h3>
-
-          <img src="img\8760611.png" class="img-article" />
-
-          <p>
-            0 <strong>HTML</strong> (Hypertext Markup Language) é a base para a
-            criação de páginas web. Utilizando tags como <em>&lt;h1&gt;</em> a
-            <em>&lt;h6&gt;</em> para cabeçalhos e <u>&lt;p&gt;</u> para
-            parágrafos, ele organiza o conteúdo de forma
-            <em>&lt;estruturada&gt;</em>. Além disso, <mark>o CSS</mark> é
-            responsável pela parte visual das páginas, como cores, fontes e
-            <u>disposição dos elementos</u>. Com o uso de A
-            <small>design responsivo</small>, as páginas se adaptam
-            automaticamente ao tamanho da tela de dispositivos móveis. Por
-            exemplo, a fórmula da água H<sub>2</sub>0 e a equação de
-            <mark>Einstein</mark>, <u>E = mc</u><sup>2</sup>, utilizam
-            <sub>subíndices</sub> e <sup>superíndices</sup> para representações
-            científicas. A evolução da web trouxe a necessidade de criar páginas
-            dinâmicas e interativas, com JavaScript. Contudo, algumas práticas
-            antigas, como a criação de páginas estáticas, estão sendo
-            <del>descontinuadas</del> em favor de abordagens mais
-            <strong>modernas</strong>.
-          </p>
-        </article>
-      </section>
-
-      <h1>Texto</h1>
-      <section id="op3">
-        <article class="borda-solida">
-          <h3>titulo</h3>
-
-          <img src="img\8760611.png" class="img-article" />
-
-          <p>
-            0 <strong>HTML</strong> (Hypertext Markup Language) é a base para a
-            criação de páginas web. Utilizando tags como <em>&lt;h1&gt;</em> a
-            <em>&lt;h6&gt;</em> para cabeçalhos e <u>&lt;p&gt;</u> para
-            parágrafos, ele organiza o conteúdo de forma
-            <em>&lt;estruturada&gt;</em>. Além disso, <mark>o CSS</mark> é
-            responsável pela parte visual das páginas, como cores, fontes e
-            <u>disposição dos elementos</u>. Com o uso de A
-            <small>design responsivo</small>, as páginas se adaptam
-            automaticamente ao tamanho da tela de dispositivos móveis. Por
-            exemplo, a fórmula da água H<sub>2</sub>0 e a equação de
-            <mark>Einstein</mark>, <u>E = mc</u><sup>2</sup>, utilizam
-            <sub>subíndices</sub> e <sup>superíndices</sup> para representações
-            científicas. A evolução da web trouxe a necessidade de criar páginas
-            dinâmicas e interativas, com JavaScript. Contudo, algumas práticas
-            antigas, como a criação de páginas estáticas, estão sendo
-            <del>descontinuadas</del> em favor de abordagens mais
-            <strong>modernas</strong>.
-          </p>
-        </article>
-
-        <article class="borda-solida">
-          <h3>titulo</h3>
-
-          <img src="img\8760611.png" class="img-article" />
-
-          <p>
-            0 <strong>HTML</strong> (Hypertext Markup Language) é a base para a
-            criação de páginas web. Utilizando tags como <em>&lt;h1&gt;</em> a
-            <em>&lt;h6&gt;</em> para cabeçalhos e <u>&lt;p&gt;</u> para
-            parágrafos, ele organiza o conteúdo de forma
-            <em>&lt;estruturada&gt;</em>. Além disso, <mark>o CSS</mark> é
-            responsável pela parte visual das páginas, como cores, fontes e
-            <u>disposição dos elementos</u>. Com o uso de A
-            <small>design responsivo</small>, as páginas se adaptam
-            automaticamente ao tamanho da tela de dispositivos móveis. Por
-            exemplo, a fórmula da água H<sub>2</sub>0 e a equação de
-            <mark>Einstein</mark>, <u>E = mc</u><sup>2</sup>, utilizam
-            <sub>subíndices</sub> e <sup>superíndices</sup> para representações
-            científicas. A evolução da web trouxe a necessidade de criar páginas
-            dinâmicas e interativas, com JavaScript. Contudo, algumas práticas
-            antigas, como a criação de páginas estáticas, estão sendo
-            <del>descontinuadas</del> em favor de abordagens mais
-            <strong>modernas</strong>.
-          </p>
-        </article>
-
-        <article class="borda-solida">
-          <h3>titulo</h3>
-
-          <img src="img\8760611.png" class="img-article" />
-
-          <p>
-            0 <strong>HTML</strong> (Hypertext Markup Language) é a base para a
-            criação de páginas web. Utilizando tags como <em>&lt;h1&gt;</em> a
-            <em>&lt;h6&gt;</em> para cabeçalhos e <u>&lt;p&gt;</u> para
-            parágrafos, ele organiza o conteúdo de forma
-            <em>&lt;estruturada&gt;</em>. Além disso, <mark>o CSS</mark> é
-            responsável pela parte visual das páginas, como cores, fontes e
-            <u>disposição dos elementos</u>. Com o uso de A
-            <small>design responsivo</small>, as páginas se adaptam
-            automaticamente ao tamanho da tela de dispositivos móveis. Por
-            exemplo, a fórmula da água H<sub>2</sub>0 e a equação de
-            <mark>Einstein</mark>, <u>E = mc</u><sup>2</sup>, utilizam
-            <sub>subíndices</sub> e <sup>superíndices</sup> para representações
-            científicas. A evolução da web trouxe a necessidade de criar páginas
-            dinâmicas e interativas, com JavaScript. Contudo, algumas práticas
-            antigas, como a criação de páginas estáticas, estão sendo
-            <del>descontinuadas</del> em favor de abordagens mais
-            <strong>modernas</strong>.
-          </p>
-        </article>
-
-        <article class="borda-solida">
-          <h3>titulo</h3>
-
-          <img src="img\8760611.png" class="img-article" />
-
-          <p>
-            0 <strong>HTML</strong> (Hypertext Markup Language) é a base para a
-            criação de páginas web. Utilizando tags como <em>&lt;h1&gt;</em> a
-            <em>&lt;h6&gt;</em> para cabeçalhos e <u>&lt;p&gt;</u> para
-            parágrafos, ele organiza o conteúdo de forma
-            <em>&lt;estruturada&gt;</em>. Além disso, <mark>o CSS</mark> é
-            responsável pela parte visual das páginas, como cores, fontes e
-            <u>disposição dos elementos</u>. Com o uso de A
-            <small>design responsivo</small>, as páginas se adaptam
-            automaticamente ao tamanho da tela de dispositivos móveis. Por
-            exemplo, a fórmula da água H<sub>2</sub>0 e a equação de
-            <mark>Einstein</mark>, <u>E = mc</u><sup>2</sup>, utilizam
-            <sub>subíndices</sub> e <sup>superíndices</sup> para representações
-            científicas. A evolução da web trouxe a necessidade de criar páginas
-            dinâmicas e interativas, com JavaScript. Contudo, algumas práticas
-            antigas, como a criação de páginas estáticas, estão sendo
-            <del>descontinuadas</del> em favor de abordagens mais
-            <strong>modernas</strong>.
-          </p>
-        </article>
-
-        <article class="borda-solida">
-          <h3>titulo</h3>
-
-          <img src="img\8760611.png" class="img-article" />
-
-          <p>
-            0 <strong>HTML</strong> (Hypertext Markup Language) é a base para a
-            criação de páginas web. Utilizando tags como <em>&lt;h1&gt;</em> a
-            <em>&lt;h6&gt;</em> para cabeçalhos e <u>&lt;p&gt;</u> para
-            parágrafos, ele organiza o conteúdo de forma
-            <em>&lt;estruturada&gt;</em>. Além disso, <mark>o CSS</mark> é
-            responsável pela parte visual das páginas, como cores, fontes e
-            <u>disposição dos elementos</u>. Com o uso de A
-            <small>design responsivo</small>, as páginas se adaptam
-            automaticamente ao tamanho da tela de dispositivos móveis. Por
-            exemplo, a fórmula da água H<sub>2</sub>0 e a equação de
-            <mark>Einstein</mark>, <u>E = mc</u><sup>2</sup>, utilizam
-            <sub>subíndices</sub> e <sup>superíndices</sup> para representações
-            científicas. A evolução da web trouxe a necessidade de criar páginas
-            dinâmicas e interativas, com JavaScript. Contudo, algumas práticas
-            antigas, como a criação de páginas estáticas, estão sendo
-            <del>descontinuadas</del> em favor de abordagens mais
-            <strong>modernas</strong>.
-          </p>
-        </article>
-
-        <article class="borda-solida">
-          <h3>titulo</h3>
-
-          <img src="img\8760611.png" class="img-article" />
-
-          <p>
-            0 <strong>HTML</strong> (Hypertext Markup Language) é a base para a
-            criação de páginas web. Utilizando tags como <em>&lt;h1&gt;</em> a
-            <em>&lt;h6&gt;</em> para cabeçalhos e <u>&lt;p&gt;</u> para
-            parágrafos, ele organiza o conteúdo de forma
-            <em>&lt;estruturada&gt;</em>. Além disso, <mark>o CSS</mark> é
-            responsável pela parte visual das páginas, como cores, fontes e
-            <u>disposição dos elementos</u>. Com o uso de A
-            <small>design responsivo</small>, as páginas se adaptam
-            automaticamente ao tamanho da tela de dispositivos móveis. Por
-            exemplo, a fórmula da água H<sub>2</sub>0 e a equação de
-            <mark>Einstein</mark>, <u>E = mc</u><sup>2</sup>, utilizam
-            <sub>subíndices</sub> e <sup>superíndices</sup> para representações
-            científicas. A evolução da web trouxe a necessidade de criar páginas
-            dinâmicas e interativas, com JavaScript. Contudo, algumas práticas
-            antigas, como a criação de páginas estáticas, estão sendo
-            <del>descontinuadas</del> em favor de abordagens mais
-            <strong>modernas</strong>.
-          </p>
-        </article>
-      </section>
     </main>
 
     <footer>
